# stuff

./: CMakeLists.txt  🐵 ⌨️.cpp
Junior Problems 2021 Test/Question 1/: CMakeLists.txt  main1.cpp  question.txt
Junior Problems 2021 Test/Question 2/: main2.py  question.txt
Junior Problems 2021 Test/Question 3/: CMakeLists.txt  main3.cpp  question.txt
Junior Problems 2021 Test/Question 4/: CMakeLists.txt  main4.cpp  question.txt
Junior Problems 2021 Test/Question 5/: main5.py  question.txt
Other/Golang/Classical guess a number game/: main.go
Other/Golang/Doubles number (working with pointers)/: main.go
Other/Golang/Open File/: main.go
